--- a/techPad-frontend/src/asset/css/index.css
+++ b/techPad-frontend/src/asset/css/index.css
@@ -7,3 +7,15 @@ body {
     margin: 0;
     box-sizing: border-box;
 }
+
+.md-editor {
+    font-family: "Source Code Pro", monospace;
+}
+
+.editor-statusbar {
+    display: none;
+}
+
+.md-editor .editor-toolbar {
+    height: 30px;
+}
