--- a/techPad-frontend/src/asset/css/index.css
+++ b/techPad-frontend/src/asset/css/index.css
@@ -8,7 +8,7 @@ body {
     box-sizing: border-box;
 }
 
-.md-editor {
+.CodeMirror-code, .editor-preview {
     font-family: "Source Code Pro", monospace;
 }
 
@@ -18,4 +18,18 @@ body {
 
 .md-editor .editor-toolbar {
     height: 30px;
+}
+
+.fa-clock-rotate-left {
+    font-size: .95rem;
+    color: rgb(90, 90, 90);
+    padding-top: 4.65px;
+    padding-left: .5rem;
+    padding-right: .5rem;
+}
+
+.reset:hover {
+    .fa-clock-rotate-left {
+        color: rgb(4, 186, 246);
+    }
 }
